implemented back (again) /textures/ with the new database format
