# public/swagger.json
@@ -86,6 +86,100 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Textures": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Texture": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"name": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "number",
+								"format": "double"
+							}
+						]
+					},
+					"tags": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"_id",
+					"name",
+					"tags"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Uses": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Paths": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Contributions": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"TextureAll": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"name": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "number",
+								"format": "double"
+							}
+						]
+					},
+					"tags": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"uses": {
+						"$ref": "#/components/schemas/Uses"
+					},
+					"paths": {
+						"$ref": "#/components/schemas/Paths"
+					},
+					"contributions": {
+						"$ref": "#/components/schemas/Contributions"
+					}
+				},
+				"required": [
+					"_id",
+					"name",
+					"tags",
+					"uses",
+					"paths",
+					"contributions"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -184,6 +278,188 @@
 					{
 						"in": "path",
 						"name": "addonId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/textures/raw": {
+			"get": {
+				"operationId": "GetRaw",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Textures"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/textures/{id}": {
+			"get": {
+				"operationId": "GetUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Texture"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/textures/{id}/uses": {
+			"get": {
+				"operationId": "GetUses",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Uses"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/textures/{id}/paths": {
+			"get": {
+				"operationId": "GetPaths",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Paths"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/textures/{id}/contributions": {
+			"get": {
+				"operationId": "GetContributions",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Contributions"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/textures/{id}/all": {
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TextureAll"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Textures"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
 						"required": true,
 						"schema": {
 							"format": "double",
